<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2launch_security</name>
  <version>1.0.0</version>
  <description>Security extensions for ros2 launch</description>
  <maintainer email="ted.kern@canonical.com">Ted Kern</maintainer>
  <license>Apache License 2.0</license>
  <author email="geoff@openrobotics.org">Geoffrey Biggs</author>
  <author email="ted.kern@canonical.com">Ted Kern</author>

  <depend>ament_index_python</depend>
  <depend>ros2launch</depend>
  <depend>nodl_python</depend>
  <depend>sros2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>demo_nodes_py</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ros2launch</test_depend>
  <test_depend>sros2</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
