<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2launch_security_examples</name>
  <version>1.0.0</version>
  <description>Examples of how to use the ros2launch_security extension.</description>
  <maintainer email="ted.kern@canonical.com">Ted Kern</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2launch_security</depend>
  <depend>ament_nodl</depend>
  <depend>sensor_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>nodl_python</test_depend>
  <test_depend>nodl_to_policy</test_depend>
  <test_depend>sros2</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
